Feature #8675 - Adding Scheduled Job for Weekly AI-Generated Eco News (#8681)
* added logic for generating eco-news

* added functionality for scheduled eco-news generation job

* changed ai requests retry logic

* updated request prompts for OpenAI: added locations, knowledge cut and time identifier for adjust response uniqueness

Co-authored-by: dima <dimasowner7201@gmail.com>
Co-authored-by: SonnyRose <keeganwunder0@gmail.com>